# NockGUIWallet

./: .env.example  .gitignore  LICENSE  README.md  api_handlers.py  checkbalance.sh  constants.py  main.py  nockchain-wallet.asc  pyproject.toml  sendsimple.sh  setup.py  splash_screen.py  state.py  ui_components.py  ui_display.py  ui_handlers.py  ui_styles.py  wallet.icon  wallet_gui.py  wallet_ops.py
.github/workflows/: build-release.yml
keys/: public_key.asc
